# IPSep-CoLa

./: .gitignore  README.md  constraint_by_type.py  convert_mtx.py  do_align.sh  fixed_layer_constraint.sh  layer_rel_fix.sh  overlap-circle.sh  overlap.sh  pyproject.toml  run_experiment.sh  runall.sh  t.py
js/: .eslintrc.cjs  README.md  package-lock.json  package.json
js/public/: w.json
js/src/: App.jsx  draw_webcola.js  render.js
scripts/: add_circle_constriant.py  calc_stress.py  calc_stress_distribution.py  calc_violation.py  compare_stress.py  compare_stress_violation.py  convert_graph.py  convert_large_mtx_to_ego.py  create_boxplot.py  create_ego_graph.py  draw.py  draw_ego_circle.py  draw_sgd.py  draw_sgd_hyper.py  draw_sgd_spherical.py  draw_sgd_torus.py  draw_unicon.py  draw_webcola.py  drawing_and_calc_stress_violation_.py  plot.py  plot_hyper.py  plot_stress_distribution.py  plot_torus.py
shell_scripts/: add_fix_layer_constraint.sh  add_orient_layer_gap.sh  add_rect-overlap.sh  draw_experience.sh  draw_networkx_small.sh  fixed_layer_constraint.sh  layer_gap.sh  layer_rel_fix.sh  overlap.sh  overlap_rect.sh  plot_experience.sh  project_after.sh  run_experiment.sh  runall.sh
src/: box_plot.py  boxplot_2item.py  compare.py  compare_box.py  compare_stress.py  compare_violation.py
src/data/: add_layer_constraint.py  add_rect-overlap_constraint.py  calc_stress.py  gap_layer_to_fixed_layer.py  generate.py  generate_constraint_by_type.py  generate_cube.py  generate_overlap_graphs.py  les_miserables_graph.py  mtx_to_networkx.py  networkx_baharabi_graph.py  no_cycle_tree.json  plot_degree.py  save_specific_graph.py
src/ipsep_cola/: QPSC.py  __init__.py  block.py  classes.py  comp_dfdv.py  (+4 more)
(+197 files in other folders)
