[project]
name = "ipsep-cola"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "itochs", email = "halglobe0108@gmail.com" }
]
dependencies = [
    "numpy>=1.26.4",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
